--- a/package.json
+++ b/package.json
@@ -1,19 +1,39 @@
 {
-  "name": "test",
+  "name": "Test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve",
+    "build": "cross-env NODE_ENV=production webpack"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/t-enikeev/test1.git"
-  },
-  "author": "",
+  "private": true,
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/t-enikeev/test1/issues"
+  "dependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@bem-react/classname": "^1.5.12",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.2",
+    "lodash.throttle": "^4.1.1",
+    "mini-css-extract-plugin": "^2.0.0",
+    "plural-ru": "^2.0.2",
+    "prop-types": "^15.7.2",
+    "qs": "^6.10.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "shallowequal": "^1.1.0",
+    "uuid": "^8.3.2",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^4.0.0-beta.3",
+    "yup": "^0.32.11"
   },
-  "homepage": "https://github.com/t-enikeev/test1#readme"
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.4"
+  }
 }
