--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://t-enikeev.github.io/test1",
   "scripts": {
     "start": "webpack serve",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "private": true,
   "license": "ISC",
@@ -17,7 +20,9 @@
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
+    "js-sha256": "^0.9.0",
     "lodash.throttle": "^4.1.1",
     "mini-css-extract-plugin": "^2.0.0",
     "plural-ru": "^2.0.2",
@@ -26,6 +31,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
+    "react-telegram-webapp": "^0.1.3",
     "shallowequal": "^1.1.0",
     "uuid": "^8.3.2",
     "webpack": "^5.42.0",
@@ -34,6 +40,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.16.4"
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "html5-entry-webpack-plugin": "^0.8.3"
   }
 }
